Fixed bug of image changing on mobile screen

--- a/Projects/Behance/style.css
+++ b/Projects/Behance/style.css
@@ -467,7 +467,6 @@ footer {
   }
 
   .title_image {
-    background: url(../../images/1920/2.png);
     width: 100%;
     height: calc(40em + 3vw);
     background-attachment: scroll;
@@ -1049,7 +1048,6 @@ footer {
   }
 
   .title_image {
-    background: url(../../images/1920/2.png);
     width: 100%;
     height: calc(24em + 3vw);
     background-attachment: scroll;
