--- a/style.css
+++ b/style.css
@@ -534,7 +534,7 @@ p {
   }
 
   .first {
-    background: url("images/1920/2.png");
+    background: url("images/1920/sdplus_mockup.webp");
     background-size: cover;
     background-position: 51% 0px;
     background-repeat: no-repeat;
@@ -543,7 +543,7 @@ p {
   }
 
   .second {
-    background: url("images/1920/ZARA_Cover2.png");
+    background: url("images/1920/chiral2.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 51% 51%;
@@ -553,7 +553,7 @@ p {
   }
 
   .third {
-    background: url("images/1920/chiral2.png");
+    background: url("images/1920/2.webp");
     /* margin-top: 13%; */
     background-size: cover;
     background-repeat: no-repeat;
@@ -786,7 +786,6 @@ p {
   }
 
   .first {
-    background: url("images/1920/2.png");
     background-size: cover;
     background-position: 51% 0px;
     background-repeat: no-repeat;
@@ -795,7 +794,6 @@ p {
   }
 
   .second {
-    background: url("images/1920/ZARA_Cover2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 51% 51%;
@@ -805,7 +803,7 @@ p {
   }
 
   .third {
-    background: url("images/1920/chiral2.png");
+
     /* margin-top: 13%; */
     background-size: cover;
     background-repeat: no-repeat;
@@ -815,7 +813,6 @@ p {
   }
 
   .fourth {
-    background: url("images/iPhone\ X_MockUp2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 65% 0px;
@@ -824,7 +821,6 @@ p {
   }
 
   .fifth {
-    background: url("images/1920/Web4.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 60% 0px;
@@ -1038,7 +1034,6 @@ p {
   }
 
   .first {
-    background: url("images/1920/2.png");
     background-size: cover;
     background-position: 51% 0px;
     background-repeat: no-repeat;
@@ -1047,7 +1042,6 @@ p {
   }
 
   .second {
-    background: url("images/1920/ZARA_Cover2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 51%;
@@ -1057,7 +1051,7 @@ p {
   }
 
   .third {
-    background: url("images/1920/chiral2.png");
+
     /* margin-top: 13%; */
     background-size: cover;
     background-repeat: no-repeat;
@@ -1068,7 +1062,6 @@ p {
   }
 
   .fourth {
-    background: url("images/iPhone\ X_MockUp2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 65% 0px;
@@ -1077,7 +1070,6 @@ p {
   }
 
   .fifth {
-    background: url("images/1920/Web4.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 60% 0px;
